change test dist to prepare for js plugin develop

--- a/sblocker/Makefile
+++ b/sblocker/Makefile
@@ -1,2 +1,6 @@
 build:
 	go build -o ./build/sblocker .
+testgo:
+	go run . -f -e ./example/go/example -t ./example/go/block -p block
+testjs:
+	go run . -f -e ./example/js/src -t ./example/js/src -p block -l js
