update plugin.go & add more action in Makefile

--- a/sblocker/Makefile
+++ b/sblocker/Makefile
@@ -1,6 +1,14 @@
 build:
 	go build -o ./build/sblocker .
-testgo:
+
+testgo-build:
 	go run . -f -e ./example/go/example -t ./example/go/block -p block
-testjs:
+testgo:
+	go run ./example/go/example
+
+testjs-pre:
+	cd ./example/js; yarn add file:/home/moyinzi/projects/gKit/sblock/libs/js/sblock4js
+testjs-build:
 	go run . -f -e ./example/js/src -t ./example/js/src -p block -l js
+testjs:
+	node ./example/js
